--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,9 @@ Thumbs.db
 
 verification/
 *.log
+
+# Go backend compiled binaries
+backend/admin-tool
+backend/admin-tool.exe
+backend/main
+backend/*.exe
