Update Docker configuration and .gitignore
- Removed multiple Dockerfile entries from .gitignore to streamline the build process.
- Added new Dockerfiles for both backend and frontend services to facilitate containerization.
- Introduced a new example production Docker Compose file to simplify deployment setup.
- Deleted the old docker-compose.yml file as it was no longer needed.

--- a/.gitignore
+++ b/.gitignore
@@ -55,27 +55,8 @@ backend/main
 backend/*.exe
 docker-compose.prod.yml
 docker-compose.yml
-*Dockerfile
 
 docker-compose.yml
 docker-compose.prod.yml
-frontend/Dockerfile
-frontend/Dockerfile.prod
-frontend/Dockerfile.dev
-frontend/Dockerfile.prod.dev
-frontend/Dockerfile.dev.prod
-frontend/Dockerfile.prod.dev.prod
-frontend/Dockerfile.dev.prod.prod
-frontend/Dockerfile.prod.dev.prod.prod
-frontend/Dockerfile.dev.prod.prod.prod
-backend/Dockerfile
-backend/Dockerfile.prod
-backend/Dockerfile.dev
-backend/Dockerfile.prod.dev
-backend/Dockerfile.dev.prod
-backend/Dockerfile.prod.dev.prod
-backend/Dockerfile.dev.prod.prod
-backend/Dockerfile.prod.dev.prod.prod
-backend/Dockerfile.dev.prod.prod.prod
-backend/Dockerfile.prod.dev.prod.prod.prod
-backend/Dockerfile.dev.prod.prod.prod.prod
+
+docker-compose.prod.yml
