Add Redis configuration and caching to backend services
- Updated Docker Compose example to include Redis environment variables.
- Modified backend configuration to support Redis connection parameters.
- Implemented Redis caching for scoreboard data in the scoreboard service.
- Added Redis connection in the main application entry point and invalidation logic in challenge service methods.

--- a/docker-compose.prod.example.yml
+++ b/docker-compose.prod.example.yml
@@ -18,6 +18,9 @@ services:
       - SMTP_USER=${SMTP_USER}
       - SMTP_PASS=${SMTP_PASS}
       - SMTP_FROM=${SMTP_FROM}
+      - REDIS_ADDR=${REDIS_ADDR}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_DB=${REDIS_DB}
 
   frontend:
     build:
